client2/src/app/app.component.css
.flex {
  flex: 1 1 auto;
}
.accesskey {
  text-decoration: underline;
}
.title {
  padding-left: 0.5em;
}
.gssb-logo {
  padding-top: 8px;
}
.sidenav-container {
  min-height: 25em;
}
.content {
  padding: 1em;
}
.active {
  background: #f5f5f5;
}
.profile-info {
  display: inline-block;
  font-size: 65%;
  margin-right: 10px;
  text-align: center;
}
.menu mat-icon {
  padding-right: 0.5em;
}
.menu {
  width: 160px;
}
.sandwich {
  width: 160px;
}

